--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,48 @@
 body {
-    background: #0a69c7;
-    background: linear-gradient(90deg, rgba(11, 107, 200, 1) 0%, rgba(60, 82, 163, 1) 50%, rgba(97, 61, 133, 1) 100%);
-   
-    margin: 0;
-    padding: 0;
+  background: #0a69c7;
+  background: linear-gradient(90deg, rgba(11, 107, 200, 1) 0%, rgba(60, 82, 163, 1) 50%, rgba(97, 61, 133, 1) 100%);
+  margin: 0;
+  padding: 0;
 }
-span {
-   color: red;
-}
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.2em;
-    background-color: white;
- }
- #title {
-   flex-direction: column;
-   line-height: 10px ;
-   color: blue;
- }
 
- img {
-    width: 300px;
-    max-height: 400px;
+span {
+  color: red;
 }
+
+header {
+  background-image: url(img/banner/placa-solar.jpg);
+  width: 800px;
+  height: 800px;
+  margin-top: 100%;
+  display:contents;
+  padding: 25px 40px 24px;
+  
+}
+.nav-link, .nav-item {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #fff;
+}
+
+
+
+.title {
+  color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+
+}
+.placa-remove { 
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  
+}
+
 /*carrosel*/
 .texto {
   position: absolute;
@@ -35,11 +52,12 @@ header {
   transform: translate(-50%, -50%);
   background-color: hsla(0, 0%, 0%, 0);
   padding: 20px;
-  color:#fff;
+  color: #fff;
 }
+
 .slogan {
   margin-top: 0;
-  color:#fff ;
+  color: #fff;
 }
 
 .lei {
@@ -50,186 +68,190 @@ header {
   margin-bottom: 0;
   color: #fff;
 }
-
-h2 { 
-    color: white;
+h1, h2, h3, h4, h5 { 
+  color: white;
+ font-family: 'Roboto Condensed', sans-serif;
 }
+
 
 /*rodapé*/
 .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
+}
 
-  .b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
 
-  .b-example-vr {
-    flex-shrink: 0;
-    width: 1.5rem;
-    height: 100vh;
-  }
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
 
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
 
-  .nav-scroller {
-    position: relative;
-    z-index: 2;
-    height: 2.75rem;
-    overflow-y: hidden;
-  }
+/*Serviços*/
 
-  .nav-scroller .nav {
-    display: flex;
-    flex-wrap: nowrap;
-    padding-bottom: 1rem;
-    margin-top: -1px;
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-  }
 
 
 /*formulario*/
 
 /* you can choose any color you want. don't be afraid to experiment  */
 
-.input, .button-form {
-    width: 100%;
-    height: 40px;
-    position: relative;
-    padding: 10px;
-    border: 0.1px solid #575cb5;
-  }
-  
-  .button-form {
-    background: #6d74e3;
-    border: none;
-  }
-  
-  .wrapper {
-    position: relative;
-    transform: skewY(-14deg);
-  }
-  
-  .wrapper li, .button-form {
-    position: relative;
-    list-style: none;
-    width: 200px;
-    z-index: var(--i);
-    transition: 0.3s;
-    color: white;
-  }
-  
-  .wrapper li::before, .button-form::before {
-    position: absolute;
-    content: '';
-    background: #6d74e3;
-    top: 0;
-    left: -40px;
-    width: 40px;
-    height: 40px;
-    transform-origin: right;
-    transform: skewY(45deg);
-    transition: 0.3s;
-  }
-  
-  .wrapper li::after, .button-form::after {
-    position: absolute;
-    content: '';
-    background: #6d74e3;
-    width: 200px;
-    height: 40px;
-    top: -40px;
-    left: 0;
-    transform-origin: bottom;
-    transform: skewX(45deg);
-    transition: 0.3s;
-  }
-  
-  .wrapper li:nth-child(1)::after, .wrapper li:nth-child(1)::before {
-    background-color: #d8daf7;
-  }
-  
-  .wrapper li:nth-child(2)::after, .wrapper li:nth-child(2)::before {
-    background-color: #c2c5f3;
-  }
-  
-  .wrapper li:nth-child(3)::after, .wrapper li:nth-child(3)::before {
-    background-color: #989deb;
-  }
-  
-  li .input {
-    outline: none;
-    border: none;
-    color: black;
-  }
-  
-  li .input::placeholder {
-    color: black;
-  }
-  
-  li:nth-child(1) .input {
-    background: #d8daf7;
-  }
-  
-  li:nth-child(2) .input {
-    background: #c2c5f3;
-  }
-  
-  li:nth-child(3) .input {
-    background: #989deb;
-  }
-  
-  
-  li:nth-child(1) .input:focus {
-    outline: none;
-    border: 3.5px solid #d8daf7;
-  }
-  
-  li:nth-child(2) .input:focus {
-    outline: none;
-    border: 3.5px solid #c2c5f3;
-  }
-  
-  li:nth-child(3) .input:focus {
-    outline: none;
-    border: 3.5px solid #989deb;
-  }
-  
-  .wrapper li:hover, button:hover {
-    transform: translateX(-20px);
-  }
-  
-  .button-form:hover, button:hover::before, button:hover::after {
-    background: #575cb5;
-  }
-  
-  .button-form:active {
-    transform: translateX(0px);
-  }
+.input,
+.button-form {
+  width: 100%;
+  height: 40px;
+  position: relative;
+  padding: 10px;
+  border: 0.1px solid #575cb5;
+}
 
-.visually-hidden { 
+.button-form {
+  background: #6d74e3;
+  border: none;
+}
+
+.wrapper {
+  position: relative;
+  transform: skewY(-14deg);
+}
+
+.wrapper li,
+.button-form {
+  position: relative;
+  list-style: none;
+  width: 200px;
+  z-index: var(--i);
+  transition: 0.3s;
+  color: white;
+}
+
+.wrapper li::before,
+.button-form::before {
+  position: absolute;
+  content: '';
+  background: #6d74e3;
+  top: 0;
+  left: -40px;
+  width: 40px;
+  height: 40px;
+  transform-origin: right;
+  transform: skewY(45deg);
+  transition: 0.3s;
+}
+
+.wrapper li::after,
+.button-form::after {
+  position: absolute;
+  content: '';
+  background: #6d74e3;
+  width: 200px;
+  height: 40px;
+  top: -40px;
+  left: 0;
+  transform-origin: bottom;
+  transform: skewX(45deg);
+  transition: 0.3s;
+}
+
+.wrapper li:nth-child(1)::after,
+.wrapper li:nth-child(1)::before {
+  background-color: #d8daf7;
+}
+
+.wrapper li:nth-child(2)::after,
+.wrapper li:nth-child(2)::before {
+  background-color: #c2c5f3;
+}
+
+.wrapper li:nth-child(3)::after,
+.wrapper li:nth-child(3)::before {
+  background-color: #989deb;
+}
+
+li .input {
+  outline: none;
+  border: none;
+  color: black;
+}
+
+li .input::placeholder {
+  color: black;
+}
+
+li:nth-child(1) .input {
+  background: #d8daf7;
+}
+
+li:nth-child(2) .input {
+  background: #c2c5f3;
+}
+
+li:nth-child(3) .input {
+  background: #989deb;
+}
+
+
+li:nth-child(1) .input:focus {
+  outline: none;
+  border: 3.5px solid #d8daf7;
+}
+
+li:nth-child(2) .input:focus {
+  outline: none;
+  border: 3.5px solid #c2c5f3;
+}
+
+li:nth-child(3) .input:focus {
+  outline: none;
+  border: 3.5px solid #989deb;
+}
+
+.wrapper li:hover,
+button:hover {
+  transform: translateX(-20px);
+}
+
+.button-form:hover,
+button:hover::before,
+button:hover::after {
+  background: #575cb5;
+}
+
+.button-form:active {
+  transform: translateX(0px);
+}
+
+.visually-hidden {
   display: none;
 
 }
-  
-  
+
+.planta {
+  width: 100px;
+  height: 100px;
+  margin-block-end: 10%;
+  margin-left: 5cm;;
+  float: left;
+  margin: 0;
+  padding-inline-end: 0;
+}
