--- a/css/style.css
+++ b/css/style.css
@@ -35,13 +35,10 @@ img {
   height: 100%;
 
 }
-.placa-remove { 
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  
+.geometria { 
+  clip-path: polygon(0 1%, 69% 0, 100% 99%, 19% 100%);
 }
+
 
 /*carrosel*/
 .texto {
