--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ img {
 
 }
 .geometria { 
-  clip-path: polygon(0 1%, 69% 0, 100% 99%, 19% 100%);
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  animation: flutuar 2s ease-in-out infinite;
 }
 
 
@@ -251,4 +252,21 @@ button:hover::after {
   float: left;
   margin: 0;
   padding-inline-end: 0;
+}
+/* Definindo a animação */
+@keyframes flutuar {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* Aplicando a animação na imagem */
+.imagem-flutuante {
+  animation: flutuar 2s ease-in-out infinite;
 }
