--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
-  background: #0a69c7;
+
   background: linear-gradient(90deg, rgba(11, 107, 200, 1) 0%, rgba(60, 82, 163, 1) 50%, rgba(97, 61, 133, 1) 100%);
   margin: 0;
-  padding: 0;
+ 
 }
+
+
 
 span {
   color: red;
@@ -17,10 +19,12 @@ header {
   display:contents;
   padding: 25px 40px 24px;
   
+  
 }
 .nav-link, .nav-item {
   font-family: 'Roboto Condensed', sans-serif;
   color: #fff;
+  padding: fixed;
 }
 
 
@@ -28,12 +32,38 @@ header {
 .title {
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
+  padding: fixed;
 }
 
 img {
   width: 100%;
   height: 100%;
 
+}
+.img-banner { 
+  width: 1500px;
+  height: 800px;
+
+}
+
+
+.container { 
+  width: 800px;
+  height: 500px;
+  background-color: transparent; 
+  margin: 0 auto;
+  position: relative;
+  padding: 20px;
+
+}
+.col { 
+  margin-inline-start: 1% ;
+  margin-inline-end: 1% ;
+  width: 49%;
+  height: 500px;
+  background-color: transparent;
+  position: relative;
+  padding: 20px
 }
 .geometria { 
   clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
@@ -85,8 +115,7 @@ img {
 
 
 .flip-card-back {
-  background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%,
-     bisque 40%, rgb(255, 185, 160) 78%);
+  background: linear-gradient(90deg, rgba(11, 107, 200, 1) 0%, rgba(60, 82, 163, 1) 50%, rgba(97, 61, 133, 1) 100%);
   color: white;
   transform: rotateY(180deg);
 }
@@ -107,6 +136,16 @@ img {
   margin-left: 25%;
   
 }
+col { 
+  width: 25%;
+  height: 25%;
+  margin: -30px;
+  padding: 0%;
+  display: inline-block; 
+
+  
+}
+
 .title-servicos, .slogan { 
   color: #fff;
   font-family: 'Roboto Condensed', sans-serif;
@@ -119,6 +158,8 @@ img {
   animation: rotateAngle 6s linear infinite;
   margin: auto;
   width: auto;
+  height: auto;
+  position: relative;
  }
  
  .button-saiba {
@@ -351,6 +392,7 @@ h1, h2, h3, h4, h5 {
 }
 
 
+
 /*rodapé*/
 .bd-placeholder-img {
   font-size: 1.125rem;
@@ -359,7 +401,14 @@ h1, h2, h3, h4, h5 {
   -moz-user-select: none;
   user-select: none;
 }
+.text-form { 
+  margin-block-end: 5em;
+  margin-block-start: 5em;
+  width: 42%;
+  margin-right: 30%;
+  text-align: center;
 
+}
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
@@ -389,29 +438,18 @@ h1, h2, h3, h4, h5 {
 .cards {
   display: flex;
   flex-direction: column;
-  gap: 15px;
-}
+  
+gap: 15px;}
 
-.cards .red {
-  background-color: #f43f5e;
-}
-
-.cards .blue {
-  background-color: #3b82f6;
-}
-
-.cards .green {
-  background-color: #22c55e;
-}
 
 .cards .card {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
-  height: 100px;
-  width: 250px;
+  height: 350px;
+  width: 300px;
   border-radius: 10px;
   color: white;
   cursor: pointer;
@@ -455,12 +493,12 @@ h1, h2, h3, h4, h5 {
   border: none;
 }
 
-.wrapper {
+.wrapper-form {
   position: relative;
   transform: skewY(-14deg);
 }
 
-.wrapper li,
+.wrapper-form li,
 .button-form {
   position: relative;
   list-style: none;
@@ -470,7 +508,7 @@ h1, h2, h3, h4, h5 {
   color: white;
 }
 
-.wrapper li::before,
+.wrapper-form li::before,
 .button-form::before {
   position: absolute;
   content: '';
@@ -484,7 +522,7 @@ h1, h2, h3, h4, h5 {
   transition: 0.3s;
 }
 
-.wrapper li::after,
+.wrapper-form li::after,
 .button-form::after {
   position: absolute;
   content: '';
@@ -498,18 +536,18 @@ h1, h2, h3, h4, h5 {
   transition: 0.3s;
 }
 
-.wrapper li:nth-child(1)::after,
-.wrapper li:nth-child(1)::before {
+.wrapper-form li:nth-child(1)::after,
+.wrapper-form li:nth-child(1)::before {
   background-color: #d8daf7;
 }
 
-.wrapper li:nth-child(2)::after,
-.wrapper li:nth-child(2)::before {
+.wrapper-form li:nth-child(2)::after,
+.wrapper-form li:nth-child(2)::before {
   background-color: #c2c5f3;
 }
 
-.wrapper li:nth-child(3)::after,
-.wrapper li:nth-child(3)::before {
+.wrapper-form li:nth-child(3)::after,
+.wrapper-form li:nth-child(3)::before {
   background-color: #989deb;
 }
 
@@ -551,7 +589,7 @@ li:nth-child(3) .input:focus {
   border: 3.5px solid #989deb;
 }
 
-.wrapper li:hover,
+.wrapper-form li:hover,
 button:hover {
   transform: translateX(-20px);
 }
@@ -597,3 +635,38 @@ button:hover::after {
 .imagem-flutuante {
   animation: flutuar 2s ease-in-out infinite;
 }
+
+
+/* Serviços Realizados*/
+
+.container {
+  position: relative;
+  width: 320px;
+  margin: 100px auto 0 auto;
+  perspective: 1000px;
+}
+
+.carousel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d; 
+  animation: rotate360 60s infinite forwards linear;
+}
+.carousel__face { 
+  position: absolute;
+  width: 300px;
+  height: 187px;
+  top: 20px;
+  left: 10px;
+  right: 10px;
+  background-size: cover;
+  box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.5);
+  display: flex;
+}
+
+span {
+  margin: auto;
+  font-size: 2rem;
+}
+
